yoo-website/versioned_docs/version-2.3.x/005-api/YooAsset.Editor/TaskGetBuildMap.md
---
title: Class TaskGetBuildMap
sidebar_label: TaskGetBuildMap
---
# Class TaskGetBuildMap


###### **Assembly**: YooAsset.Editor.dll

```csharp title="Declaration"
public class TaskGetBuildMap
```
## Methods
### CreateBuildMap(bool, BuildParameters)
生成资源构建上下文

```csharp title="Declaration"
public BuildMapContext CreateBuildMap(bool simulateBuild, BuildParameters buildParameters)
```

##### Returns

[YooAsset.Editor.BuildMapContext](/docs/2.3.x/api/YooAsset.Editor/BuildMapContext)

##### Parameters

| Type | Name |
|:--- |:--- |
| `System.Boolean` | *simulateBuild* |
| [YooAsset.Editor.BuildParameters](/docs/2.3.x/api/YooAsset.Editor/BuildParameters) | *buildParameters* |

### PreProcessPackShareBundle(BuildParameters, CollectCommand, Dictionary&lt;string, BuildAssetInfo&gt;)
共享资源打包前置处理

```csharp title="Declaration"
protected virtual void PreProcessPackShareBundle(BuildParameters buildParameters, CollectCommand command, Dictionary<string, BuildAssetInfo> allBuildAssetInfos)
```

##### Parameters

| Type | Name |
|:--- |:--- |
| [YooAsset.Editor.BuildParameters](/docs/2.3.x/api/YooAsset.Editor/BuildParameters) | *buildParameters* |
| [YooAsset.Editor.CollectCommand](/docs/2.3.x/api/YooAsset.Editor/CollectCommand) | *command* |
| `System.Collections.Generic.Dictionary<System.String,YooAsset.Editor.BuildAssetInfo>` | *allBuildAssetInfos* |

### ProcessingPackShareBundle(BuildParameters, CollectCommand, BuildAssetInfo)
共享资源打包机制

```csharp title="Declaration"
protected virtual void ProcessingPackShareBundle(BuildParameters buildParameters, CollectCommand command, BuildAssetInfo buildAssetInfo)
```

##### Parameters

| Type | Name |
|:--- |:--- |
| [YooAsset.Editor.BuildParameters](/docs/2.3.x/api/YooAsset.Editor/BuildParameters) | *buildParameters* |
| [YooAsset.Editor.CollectCommand](/docs/2.3.x/api/YooAsset.Editor/CollectCommand) | *command* |
| [YooAsset.Editor.BuildAssetInfo](/docs/2.3.x/api/YooAsset.Editor/BuildAssetInfo) | *buildAssetInfo* |

### PostProcessPackShareBundle(BuildParameters, CollectCommand, Dictionary&lt;string, BuildAssetInfo&gt;)
共享资源打包后置处理

```csharp title="Declaration"
protected virtual void PostProcessPackShareBundle(BuildParameters buildParameters, CollectCommand command, Dictionary<string, BuildAssetInfo> allBuildAssetInfos)
```

##### Parameters

| Type | Name |
|:--- |:--- |
| [YooAsset.Editor.BuildParameters](/docs/2.3.x/api/YooAsset.Editor/BuildParameters) | *buildParameters* |
| [YooAsset.Editor.CollectCommand](/docs/2.3.x/api/YooAsset.Editor/CollectCommand) | *command* |
| `System.Collections.Generic.Dictionary<System.String,YooAsset.Editor.BuildAssetInfo>` | *allBuildAssetInfos* |

